Prevent (equal points rule) dropdown overflow on mobile

--- a/app/javascript/src/styles/_form.scss
+++ b/app/javascript/src/styles/_form.scss
@@ -31,6 +31,7 @@ $inputHeight: 16px;
 
   select {
     height: 34px;
+    max-width: 100%;
     -webkit-appearance: menulist-button;
   }
 
